<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_feedback"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_backcolor"
    android:orientation="vertical"
    tools:context=".Main" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:background="@drawable/main_header"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_feedback_backbtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="25" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/navigate_topleft" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="45" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="70" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/AutoSizeTextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/feedback"
                android:textColor="@color/color_white"
                android:textSize="@dimen/header_title_fontsize"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="20" >
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_feedback_submit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="50" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/share_submit_btn" />

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/autoSizeTextView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/feedback_submit"
                android:textColor="@color/color_white"
                android:textSize="@dimen/share_submit" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="@drawable/activity_time_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="90" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/lab_feedback_curdate"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/date_fontsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/AutoSizeTextView02"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/today"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/date_fontsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3" >
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/main_item_sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="369"
        android:background="@color/color_white" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="100"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="15"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/autoSizeTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="bottom|left"
                    android:text="@string/feedback_title"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/feedback_title_fontsize"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/AutoSizeTextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/feedback_body"
                    android:textColor="@color/feedback_body"
                    android:textSize="@dimen/feedback_body_fontsize"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/AutoSizeTextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/feedback_itemtitle"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/feedback_body_fontsize"
                    android:textStyle="bold" />

                <com.damy.Utils.AutoSizeEditText
                    android:id="@+id/txt_feedback_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="@dimen/feedback_body_fontsize" >

                    <requestFocus />
                </com.damy.Utils.AutoSizeEditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/AutoSizeTextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:text="@string/feedback_itembody"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/feedback_body_fontsize"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="30" >

                        <com.damy.Utils.AutoSizeEditText
                            android:id="@+id/txt_feedback_body"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:ems="10"
                            android:gravity="top"
                            android:inputType="textMultiLine"
                            android:textSize="@dimen/feedback_body_fontsize" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" >
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fl_feedback_filebtn"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="5" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:src="@drawable/feedback_filebtn" />

                        <com.damy.Utils.AutoSizeTextView
                            android:id="@+id/autoSizeTextView3"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/feedback_filebtn"
                            android:textSize="@dimen/feedback_body_fontsize" />

                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="5" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>