<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_faq"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_backcolor"
    android:orientation="vertical"
    tools:context=".Main" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:background="@drawable/main_header"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_myopinion_backbtn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="25" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:src="@drawable/btn_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="45" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="70" >

            <com.damy.Utils.AutoSizeTextView
                android:id="@+id/AutoSizeTextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/myopinion_title"
                android:textColor="@color/color_white"
                android:textSize="@dimen/header_title_fontsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="20" >
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_faq_myfaqadd"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="50" >

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="10" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="@drawable/activity_time_back"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="90" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/lab_myopinion_curdate"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/date_fontsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/AutoSizeTextView02"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/today"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/date_fontsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3" >
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/main_item_sep" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="369"
        android:background="@drawable/activity_back_img"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_myopinion_type1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:background="@drawable/activity_sel_btn"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/lab_myopinion_type1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/myopinion_type1"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/share_tab_fontsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_myopinion_type2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:background="@drawable/activity_unsel_btn"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/lab_myopinion_type2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/myopinion_type2"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/share_tab_fontsize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_myopinion_type3"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:background="@drawable/activity_unsel_btn"
                android:orientation="vertical" >

                <com.damy.Utils.AutoSizeTextView
                    android:id="@+id/lab_myopinion_type3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/myopinion_type3"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/share_tab_fontsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10" >
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="300"
            android:orientation="vertical" >

            <com.damy.Utils.PullToRefreshListView
                android:id="@+id/anMyOpinionContentView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="703" >
            </com.damy.Utils.PullToRefreshListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>